# 3dPCB-paper

./: .gitignore  AGENTS.md  CONTRIBUTOR.md  README.md  flake.nix  process-compose.yaml
.deepwork/: job.schema.json
.deepwork/jobs/printable_pcb/: .deepreview  AGENTS.md  job.yml
.deepwork/jobs/printable_pcb/scripts/: run_voxel_check.sh  run_voxel_suggestions.sh
.deepwork/schemas/printable_pcb_substrate_plan/: deepschema.yml
.playwright-mcp/: page-2026-05-27T09-07-28-133Z.yml  page-2026-05-27T09-08-46-086Z.yml  page-2026-05-27T09-11-03-780Z.yml
cad/src/: registry.py
cad/src/vitamins/: sensors.py
code/: AGENTS.md  package.json  pyproject.toml
code/bambu/: .env.example  bridge.py  flake.nix
code/cad/: .deepreview  HARDWARE_BLOCKERS.md  README.md  flake.nix  pyproject.toml
code/cad/freecad/: step_to_stl.py
code/cad/specs/: i2c_midline_no_oled.yaml  i2c_midline_sensors.yaml  i2c_sensors_flipped.yaml  i2c_starter.yaml  tier2_climb_at_minus_seven.yaml  tier2_compact.yaml  tier2_highway_at_fifteen.yaml  tier2_option2.yaml
code/cad/src/: __init__.py  netlist.py  netlist_audit.md  registry.py  voxel_grid.py  voxel_suggester.py
code/cad/src/board/: __init__.py  board.py  build.py  buses.py  cli_report.py  cli_score.py  connectors.py  device_library.py  devices.py  loader.py  mounts.py  pins.py  spec_discovery.py
code/cad/src/circuit/: __init__.py  build.py  loader.py  models.py
code/cad/src/optimizer/: __init__.py  cli.py  collision.py  eligibility.py  metrics.py  plan_parser.py  proposals.py  proximity.py  signal_class.py  weights.default.yaml  weights.py
code/cad/src/router/: __init__.py  __main__.py  align.py  astar.py  autoroute.py  blocking.py  cli_report.py  cli_score.py  collapse.py  collisions.py  grid.py  lattice.py  optimiser.py  paths.py  schedule.py  score.py
code/cad/src/vitamins/: esp32.py  esp32_pinout.py  oled_ssd1306_pinout.py  receptacle_test_coupon.py  sensors.py  sensors_pinout.py  substrate.py
code/cad/tests/: conftest.py  test_board_pipeline.py  test_circuit_spec.py  test_collapse.py  test_dims.py  test_lattice_router.py  test_netlist.py  test_optimiser.py  test_optimizer_bus_trunk.py  test_optimizer_cli.py  test_optimizer_collision.py  test_optimizer_eligibility.py  test_optimizer_grammar.py  test_optimizer_metrics.py  test_optimizer_parser.py  test_optimizer_proximity.py  test_optimizer_signal_class.py  test_router_paths.py  test_router_score.py  test_substrate_routing.py  test_wire_lengths.py
code/cad/tests/fixtures/: spike_v2_tier2_with_oled.md
code/kicad/: .gitignore  README.md  RESEARCH.md  flake.nix  gen_spike_pcb.py  spike.kicad_pcb  spike.kicad_pro  spike.kicad_sch
code/kicad/placements/: README.md  stacked_vertical.yaml
code/web/: .gitignore  README.md  astro.config.mjs  flake.nix  package.json
code/web/public/: style.css
code/web/public/models/cad/: .gitignore
code/web/public/models/kicad/: .gitignore
code/web/public/models/vitamins/: .gitignore
code/web/src/: manifest.cad.yaml  manifest.kicad.yaml  manifest.vitamins.yaml
code/web/src/components/: PrinterPanel.astro
code/web/src/layouts/: Layout.astro
code/web/src/pages/: index.astro  printer.astro
code/web/src/pages/api/: open.ts  save-spec.ts
code/web/src/pages/api/printer/: print.ts  status.ts
code/web/src/pages/api/printer/camera/: start.ts  status.ts  stop.ts  stream.ts
code/web/src/pages/api/printer/control/: light.ts  print.ts
code/web/src/pages/api/printer/print/: status.ts
code/web/src/pages/embodiment/: [id].astro
code/web/src/pages/model/[project]/: [name].astro
code/web/src/reports/: substrate_i2c_midline_no_oled.json  substrate_i2c_midline_sensors.json  substrate_i2c_sensors_flipped.json  substrate_i2c_starter.json  substrate_tier2_climb_at_minus_seven.json  substrate_tier2_compact.json  substrate_tier2_highway_at_fifteen.json  tier1_substrate.json  tier2_substrate.json  tier2_substrate_bundled.json  tier2_substrate_from_spec.json  tier2_substrate_option2.json
data/models/: .gitignore  README.md
data/models/bh1750_breakout/: ATTRIBUTION.md
data/models/esp32_c3_supermini/: ATTRIBUTION.md
data/models/scd40_breakout/: ATTRIBUTION.md
docs/: architecture.md  bambu-direct-print.md  breadboard-model.md  constitution.md  fdm_tolerance_notes.md  goals.md  module_back_conductivity.md  paper.md  plan.md  progress.md  vernacular.md
docs/kicad/: images.md
docs/plants/: W20-demoable-paper.md
docs/specs/breadboard-canonical-substrate/: data-model.md  plan.md  research.md  spec.md  tasks.md
docs/specs/breadboard-native-routing-grid/: plan.md
docs/specs/lattice-native-router/: plan.md
kicad/: flake.nix
kicad/spike/: README.md
printable_pcb/spike/: routing_check.md  substrate_plan.md
printable_pcb/spike_v2/: routing_check.md  substrate_plan.md
