[project]
name = "pcb-paper-cad"
version = "0.1.0"
description = "Spike CAD: ESP32-C3 Supermini + SCD41 + BH1750 on a 3D-printed PCB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anchorscad-core>=0.2.4",
    "numpy>=2.3.5",
    "pythonopenscad>=2.2.19",
    # 3MF → GLB conversion that preserves OpenSCAD's per-face colors.
    # assimp's GLB writer flattens 3MF basematerials to a single
    # material; trimesh reads the per-triangle pid refs into
    # ColorVisuals and writes a GLB <model-viewer> renders correctly.
    "trimesh>=4.0",
    "networkx>=3.0",
    "lxml>=5.0",
    "manifold3d>=3.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
